# Python-Practice

./: .gitignore  LICENSE  README.MD  requirements.txt
Absolute Basics/: C1_hello_world.py  C2_l1_Strings.py  C2_l2_Numbers.py  C4_l1_Looping_list.py  C4_l2_Numerical_Lists.py  C4_l3_Partial_Lists.py  C7_l1_Input.py  C7_l2_While.py  C8_l1_Function_define.py  C8_l4_Function_lists.py  C8_l6_Function_Modules.py  C9_l4_Importing_Class.py  README.md  car.py
Absolute Basics/OOP/: CMakeLists.txt  learnoop.cpp  learnoop.ipynb
Absolute Basics/OOP/src/ccsrc/: Base.cpp  Base.h  Inheritance.cpp  Inheritance.h  Polymorphism.cpp  Polymorphism.h  ccsrc.h
Absolute Basics/OOP/src/pysrc/: Base.py  Inheritance.py  Polymorphism.py
Absolute Basics/python crash course/: Bluetooth_Speaker.py  C3_l1_What_is_a_List.py  C3_l2_Operations_on_Elements.py  C3_l3_Organizing_lists.py  C4_l4_Tuples.py  C5_l1_If_elif_else_example.py  C6_Dictionaries_and_Sets.py  C8_l2_Function_arguments.py  C8_l3_Function_return.py  C8_l5_arbitrary_num_arg.py  C9_l1_Class_Basics.py  C9_l2_Instances.py  C9_l3_Inheritance.py  electric_car.py
CV/Linear Algebra/: LinearAlgebra.ipynb
Kits/: Dir2XML.MD  Dir2XML.py  SourceLoader.py  d2x_details.MD
Numpy/: .gitignore  01_NumPy_Array_Shapes.ipynb  02_Computing_numpy_arrays.ipynb  Computing_numpy_arrays.ipynb
Simple_NN/: README.MD  TemplateNN.ipynb  trainer.py
Simple_NN/dataset/: data_processor.py
Simple_NN/dataset/data/: 5D_data.csv  data.csv
Simple_NN/src/: Solver.py
Torch_NN/: train.py
Torch_NN/src/: __init__.py
np/: NumPy_array_shapes.ipynb
(+21 files in other folders)
